<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoCylinderStatus" Id="{f69e159f-b5da-4e82-86ac-5e9a89e5aa30}">
    <Declaration><![CDATA[TYPE
    TcoCylinderStatus :
    STRUCT
        ActionDescription : STRING(100);
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>